Change url link for profile_picture to author_picture

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -55,7 +55,7 @@
                             <p>{{ post.overview | slice:":100"}} . . .</p>
                         </div>
                         <div class="author-info">
-                            <span><img class="author-img" src="{{ post.author.profile_picture.url }}"
+                            <span><img class="author-img" src="{{ post.author.author_picture.url }}"
                                     alt="{{ post.author }} Image"></span>
                             <span>{{ post.author }} | </span>
                             <span><i class="fas fa-clock"></i>{{ post.timestamp | timesince }}| </span>
@@ -104,7 +104,7 @@
                             <p>{{ post.overview | slice:":100"}} . . .</p>
                         </div>
                         <div class="author-info">
-                            <span><img class="author-img" src="{{ post.author.profile_picture.url }}"
+                            <span><img class="author-img" src="{{ post.author.author_picture.url }}"
                                     alt="{{ post.author }} Image"></span>
                             <span>{{ post.author }} | </span>
                             <span><i class="fas fa-clock"></i>{{ post.timestamp | timesince }}| </span>
@@ -166,7 +166,7 @@
                             <p>{{ post.overview | slice:":100"}} . . .</p>
                         </div>
                         <div class="author-info">
-                            <span><img class="author-img" src="{{ post.author.profile_picture.url }}"
+                            <span><img class="author-img" src="{{ post.author.author_picture.url }}"
                                     alt="{{ post.author }} Image"></span>
                             <span>{{ post.author }} | </span>
                             <span><i class="fas fa-clock"></i>{{ post.timestamp | timesince }}| </span>
@@ -219,7 +219,7 @@
                             <p>{{ post.overview | slice:":100"}} . . .</p>
                         </div>
                         <div class="author-info">
-                            <span><img class="author-img" src="{{ post.author.profile_picture.url }}"
+                            <span><img class="author-img" src="{{ post.author.author_picture.url }}"
                                     alt="{{ post.author }} Image"></span>
                             <span>{{ post.author }} | </span>
                             <span><i class="fas fa-clock"></i>{{ post.timestamp | timesince }}| </span>
