Change button and updated contact

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -16,10 +16,10 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="contact-details">
-                        <h4>Contacto</h4>
-                        <p><i class="fas fa-phone"></i>+089 9648 84547</p>
-                        <p><i class="far fa-envelope"></i>info@tastyblog.com</p>
-                        <p><i class="fas fa-home"></i>2A Bow Lane - Dublin 8</p>
+                        <h4>Contact</h4>
+                        <p><i class="fas fa-phone"></i>+353 83 825 903</p>
+                        <p><i class="far fa-envelope"></i>tasty.blog@info.com</p>
+                        <p><i class="fas fa-home"></i>St. Augustine Street 78a - Dublin 8</p>
                     </div>
                     <div class="contact-details-img">
                         <!-- <img src="{% static '/images/logos/logo-tasty-blog-small-removebg.png' %}" alt=""> -->
@@ -55,7 +55,7 @@
                             <textarea class="form-control" id="message" rows="5" name="message" cols="40" required></textarea>
                         </div>
                         <div class="col-12">
-                            <button type="submit" class="btn btn-primary">Sign in</button>
+                            <button type="submit" class="btn btn-primary">Send</button>
                         </div>
                     </form>
                     <!-- end of contact form -->
