--- a/templates/profile.html
+++ b/templates/profile.html
@@ -45,7 +45,7 @@
                     <form action="" method="POST">
                         {% csrf_token%}
                         <p>{{ user.username }}, are you sure you want to delet your profile?</p>
-                        <a href=""><button type="button" class="btn btn-danger"
+                        <a href="" aria-label="Go to the profile delete box"><button type="button" class="btn btn-danger"
                                 data-bs-dismiss="modal"> Delete </button></a>
                     </form>
                 </div>
