--- a/templates/categories_posts.html
+++ b/templates/categories_posts.html
@@ -124,7 +124,7 @@
         <div class="container p-5">
             <div class="row">
                 <div class="col-md-8">
-                    <h2>Sorry this page does not exist!</h2>
+                    <h2>Sorry, there is no recipes for {{ cats }} category yet!</h2>
                 </div>
             </div>
         </div>
