Remove inline CSS and add arial labels

--- a/static/css/my_css.css
+++ b/static/css/my_css.css
@@ -547,7 +547,7 @@ button,
 
 /*******************************
 *                              *
-*         LOGIN PAGES          *
+*         LOGS PAGES          *
 *                              *
 *******************************/
 
