--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -6,14 +6,14 @@
 
 {% block content %}
 <!-- SIGNUP SECTION -->
-<section class="logs-pages" style="top: 0; left: 0; transform: translateY(25%); height: 70vh;">
+<section class="logs-pages signup">
     <div class="container box-shadow">
         <div class="row">
             <div class="col-md-8 mt-3 offset-md-2">
                 <h3>{% trans "Sign Up" %}</h3>
 
                 <p>{% blocktrans %}Welcome back to the code|star blog. Do you already have an account? Then please <a
-                        class="link" href="{{ login_url }}">sign in</a> instead.{% endblocktrans %}</p>
+                        class="link" href="{{ login_url }}" aria-label="Go to the login page">sign in</a> instead.{% endblocktrans %}</p>
             </div>
         </div>
         <div class="row">
