--- a/templates/blog.html
+++ b/templates/blog.html
@@ -172,10 +172,9 @@
                             <span><i class="fas fa-clock"></i>{{ post.timestamp | timesince }}| </span>
                             <span><i class="fas fa-heart"></i>{{ post.number_of_likes }}</span>
                             <span>| <i class="far fa-comments"></i>{{ num_comments }}</span>
-                            {% with comments.count as total_comments %}
-                                    <span class="text-secondary">| <i class="far fa-comments"></i>
-                                        {{ total_comments }}</span>
-                          {% endwith %}
+                            <span class="text-secondary">| <i class="far fa-comments"></i>
+                                {{ total_comments }}</span>
+                            {% endwith %}
                         </div>
                     </div>
                 </a>
@@ -225,10 +224,6 @@
                             <span><i class="fas fa-clock"></i>{{ post.timestamp | timesince }}| </span>
                             <span><i class="fas fa-heart"></i>{{ post.number_of_likes }}</span>
                             <span>| <i class="far fa-comments"></i>{{ num_comments }}</span>
-                                <!-- {% with comments.count as total_comments %}
-                                    <span class="text-secondary">| <i class="far fa-comments"></i>
-                                        {{ total_comments }}</span>
-                                    {% endwith %} -->
                         </div>
                     </div>
                 </a>
@@ -245,10 +240,12 @@
 <nav aria-label="Page navigation">
     <ul class="pagination justify-content-center">
         {% if page_obj.has_previous %}
-        <li><a href="?page={{ page_obj.previous_page_number }}" aria-label="Go to the blog next page" class="page-link">&laquo; PREV </a></li>
+        <li><a href="?page={{ page_obj.previous_page_number }}" aria-label="Go to the blog next page" 
+                class="page-link">&laquo; PREV </a></li>
         {% endif %}
         {% if page_obj.has_next %}
-        <li><a href="?page={{ page_obj.next_page_number }}" aria-label="Go to the blog back page" class="page-link"> NEXT &raquo;</a></li>
+        <li><a href="?page={{ page_obj.next_page_number }}" aria-label="Go to the blog back page" class="page-link"> 
+                sNEXT &raquo;</a></li>
         {% endif %}
     </ul>
 </nav>
