--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -93,6 +93,7 @@
                         {% endif %}
                     </div>
                     <h4>Comments</h4>
+                    <span class="text-secondary"><i class="far fa-comments"></i>{{ num_comments }}</span>
                     {% for comment in comments %}
                     <div class="users-comments">
                         <!-- <span><img class="author-img"
