--- a/static/css/my_css.css
+++ b/static/css/my_css.css
@@ -622,6 +622,10 @@ button,
         bottom: 15px;
     }
 
+    .login-items {
+        bottom: -8px !important;
+    }
+
     #blog-content-1 {
         display: none;
     }
