Change HTML text tag and fix CSS media querie for results-empty and result-null

--- a/templates/search.html
+++ b/templates/search.html
@@ -44,7 +44,7 @@
         <div class="results-empty">
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="info-text">You forgot to search for a recepie. <br>Please try searching again.</h2>
+                    <h2>You forgot to search for a recepie. <br>Please try searching again.</h2>
                 </div>
             </div>
         </div>
