--- a/static/css/my_css.css
+++ b/static/css/my_css.css
@@ -190,9 +190,9 @@ button,
     margin-bottom: 15px;
 }
 
-#searched-box .results-empty .info-text {
+#searched-box .results-empty h2 {
     line-height: 50px;
-    margin-top: 100%;
+    margin-top: 30%;
     font-size: clamp(1.5rem, 2vw, 2.1rem); 
 }
 
@@ -674,7 +674,7 @@ button,
     }
 
     #searched-box .row {
-        padding: 15px 0 ;
+        padding: 34px 0 ;
     }
 
     #searched-box .container {
