--- a/static/css/my_css.css
+++ b/static/css/my_css.css
@@ -590,8 +590,8 @@ button,
 }
 
 #profile .col-md-6 img {
-    width: 15%;
-    border-radius: 50%;
+    width: 80px;
+    height: 80px;
 }
 
 #profile .user-info-box {
