Change logs pages templates

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -13,9 +13,9 @@
             <div class="col-md-6 mt-5 offset-md-2">
                 <h3>{% trans "Sign In" %}</h3>
 
-                <p>{% blocktrans %}Welcome back to the Tasty Blog. To leave a comment or like a post, please log in. If
-                    you
-                    have not created an account yet, then <a class="link" href="{{ signup_url }}" aria-label="Go to the signup page"">sign up</a>
+                <p>{% blocktrans %}Welcome back to the Tasty Blog. To leave a comment or like a post, please log in. If you
+                    have not created an account yet, then <a class="link" href="{{ signup_url }}" 
+                        aria-label="Go to the signup page"">sign up</a>
                     first.{% endblocktrans %}</p>
             </div>
         </div>
