Change welcome message content

--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -12,7 +12,7 @@
             <div class="col-md-8 mt-3 offset-md-2">
                 <h3>{% trans "Sign Up" %}</h3>
 
-                <p>{% blocktrans %}Welcome back to the code|star blog. Do you already have an account? Then please <a
+                <p>{% blocktrans %}Welcome back to the Tasty Blog. Do you already have an account? Then please <a
                         class="link" href="{{ login_url }}" aria-label="Go to the login page">sign in</a> instead.{% endblocktrans %}</p>
             </div>
         </div>
