--- a/static/css/my_css.css
+++ b/static/css/my_css.css
@@ -494,13 +494,14 @@ button,
     color: #fff;
 }
 
-#contatc .email_sent_message {
-    padding: 10px;
-    margin-top: 10px;
+#contact .email_sent_message {
+    padding: 15px;
+    margin-top: 15px;
+    text-align: center;
 }
 
-#contatc .email_sent_message h4 {
-    font-size: clamp(1.2rem, 2vw, 1rem);
+#contact .email_sent_message h4 {
+    font-size: clamp(1.3rem, 2vw, 1rem);
 }
 
 /*******************************
