--- a/templates/contact.html
+++ b/templates/contact.html
@@ -21,9 +21,9 @@
                         <p><i class="far fa-envelope"></i>tasty.blog@info.com</p>
                         <p><i class="fas fa-home"></i>St. Augustine Street 78a - Dublin 8</p>
                     </div>
-                    <div class="email_sent_message alert-success">
+                    <div>
                         {% if name %}
-                        <h4>Thanks for your email {{ name}}.<br> We will contact you as soon as possible!</h4>
+                        <h4 class="email-sent-message alert-success">Thanks for your email {{ name }}.<br> We will contact you as soon as possible!</h4>
                         {% endif %}
                     </div>
                 </div>
