--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -6,13 +6,12 @@
 
 {% block content %}
 <!-- SIGNUP SECTION -->
-<section class="logs-pages signup">
+<section class="logs-pages">
     <div class="container box-shadow">
         <div class="row">
             <div class="col-md-8 mt-3 offset-md-2">
                 <h3>{% trans "Sign Up" %}</h3>
-
-                <p>{% blocktrans %}Welcome back to the Tasty Blog. Do you already have an account? Then please <a
+                    <p>{% blocktrans %}Welcome back to the Tasty Blog. Do you already have an account? Then please <a
                         class="link" href="{{ login_url }}" aria-label="Go to the login page">sign in</a> instead.{% endblocktrans %}</p>
             </div>
         </div>
