--- a/static/css/my_css.css
+++ b/static/css/my_css.css
@@ -557,27 +557,12 @@ button,
 *******************************/
 
 .logs-pages {
-    top: 0;
-    left: 0;
-    margin-top: -100px;
-    height: 70vh;
+    margin-bottom: 250px;
     transform: translateY(20%); 
 }
 
 .log-out {
-    transform: translateY(50%);
-    height: 60vh; 
-    margin-bottom: 120px;
-}
-
-.signup {
-    margin-top: -100px;
-    transform: translateY(25%);
-}
-
-.signup .col-md-8 {
-    padding-bottom: 80px !important;
-    margin-top: -5px !important;
+    margin-bottom: 80px;
 }
 
 .logs-pages input {
@@ -712,7 +697,11 @@ button,
     #profile .user-info-box {
         text-align: center;
         margin-top: 25px;
-    }  
+    }
+    
+    .logs-pages {
+        transform: translateY(-5%);
+    }
 }
 
 @media only screen and (max-width: 600px) {
@@ -765,5 +754,9 @@ button,
 @media only screen and (max-width:400px) {
     input {
          font-size: 12px;
+    }
+
+    .logs-pages {
+        transform: translateY(-5%);
     }
 }
