Add box-shadow class to the container

--- a/templates/categories.html
+++ b/templates/categories.html
@@ -6,7 +6,7 @@
     <!-- CATEGORIES SECTION -->
     <section id="content" class="content content-categories">
         <h2 class="title">Categories</h2>
-        <div class="container">
+        <div class="container box-shadow">
             <div class="row">
                 {{ cats }}
                 {% for category in categories_list %}
