Remove document.write to load jquery script

--- a/templates/components/scripts.html
+++ b/templates/components/scripts.html
@@ -1,11 +1,7 @@
 {% load static %}
 
-<!-- JQUERY CDN -->
-<script src="//code.jquery.com/jquery-3.6.0.slim.min.js"></script>
-<!-- IF CDN FAILS TO LOAD SERVE UP THE LOCAL VERSION -->
-<script>
-    window.jquery || document.write("<script src='{% static 'js/jquery_3.6.0.js' %}'><\/script>")
-</script>
+<!-- JQUERY -->
+<script src="{% static 'js/jquery_3.6.0.js' %}"></script>
 <!-- JQUERY UI -->
 <script src="{% static 'js/jquery-ui-1.12.1/jquery-ui.min.js' %}"></script>
 <!-- BOOTSTRAP JS -->
@@ -19,7 +15,7 @@
         let messages = document.getElementById('alert');
         let alert = new bootstrap.Alert(messages);
         alert.close();
-    }, 3500);
+    }, 3500)
 </script>
 </body>
 
