Add comma for .carousel-caption h2

--- a/static/css/my_css.css
+++ b/static/css/my_css.css
@@ -302,7 +302,7 @@ button,
 }
 
 #hero .carousel-caption h2 {
-    font-size: clamp(1.5rem, 2vw 3rem);
+    font-size: clamp(1.5rem, 2vw, 3rem);
     letter-spacing: 2px;
 }
 
