Remove sub hero section HTML structure and add block include 'components/sub_hero_section.html'

--- a/templates/about.html
+++ b/templates/about.html
@@ -3,11 +3,7 @@
 
 {% block content %}
 
-    <!-- SUB HERO SECTION -->
-    <div id="sub-hero" class="bg-setup parallax" style="background-image:url({% static 'images/footer-bg.jpg' %});"></div>
-        <div class="overlay"></div>
-    </div>
-    <!-- END OF SUB HERO -->
+{% include 'components/sub_hero_section.html' %}
 
     <!-- ABOUT SECTION -->
     <section id="about">
