--- a/templates/categories_posts.html
+++ b/templates/categories_posts.html
@@ -2,12 +2,7 @@
 {% load static %}
 {% block content %}
 
-
-    <!-- SUB HERO SECTION -->
-    <section id="sub-hero" class="bg-setup parallax" style="background-image:url({% static 'images/footer-bg.jpg' %});">
-        <div class="overlay"></div>
-    </section>
-    <!-- END OF SUB HERO -->
+{% include 'components/sub_hero_section.html' %}
 
     <!-- CONTENT BLOG SECTION 1-->
     <section id="blog-content-1" class="content">
