Remove form submit API from the contact form

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -25,8 +25,7 @@
                 </div>
                 <div class="col-md-8">
                     <!-- contact form -->
-                    <form action="https://formsubmit.co/jure.web.test@gmail.com" method="post" class="row g-3">
-                        <input type="hidden" name="_captcha" value="false">
+                    <form action="{% url 'contact' %}" method="post" class="row g-3"></form>
                         {% csrf_token %}
                         <div class="col-md-6">
                             <label for="name" class="form-label">Name</label>
