--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -22,7 +22,7 @@
 <!-- NAVBAR -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand"><img
+        <a href="/" class="navbar-brand"><img
                 src="{% static 'images/logos/logo-tasty-blog-small-removebg.png' %}" alt="Tasty blog logo"></a>
         <button class="navbar-toggler box-shadow" style="text-align: center;" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
