--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -2,7 +2,7 @@
 
 
  <!-- SEARCH BOX SECTION -->
- <section id="search-box">
+ <div id="search-box">
     <div class="search-nav">
         <img src="{% static 'images/logos/logo-tasty-blog-small-removebg.png' %}" alt="Tasty blog logo">
         <i class="fas fa-times"></i>
@@ -16,7 +16,7 @@
             </form>
         </div>
     </div>
-</section>
+</div>
 <!-- END OF SEARCH BOX SECTION -->
 
 <!-- NAVBAR -->
@@ -86,7 +86,7 @@
 <!-- END OF NAVBAR -->
 <br><br><br>
 <!-- ALERT SECTION -->
-<section id="alert-box">
+<div id="alert-box">
     <div class="container">
         <div class="row">
             <div class="col-md-8 offset-md-2 text-center">
@@ -98,5 +98,5 @@
             </div>
         </div>
     </div>
-</section>
+</div>
 <!-- END OF ALERT SECTION -->
