Center results null content

--- a/templates/search.html
+++ b/templates/search.html
@@ -28,9 +28,9 @@
             </a>
             <hr>
             {% empty %}
-            <div class="results-null" style="margin-top: -180px;">
+            <div class="results-null">
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-md-12" style="text-align: center;">
                         <h2>We Are Sorry</h2>
                         <p>There are no search for <span class="text-success">"{{ searched }}"</span> in the website.</p>
                         <p>Try searching again.</p>
