--- a/static/css/my_css.css
+++ b/static/css/my_css.css
@@ -691,7 +691,10 @@ button,
 
     #searched-box .results-null {
         margin-top: 15px !important;
-        text-align: center;
+    }
+
+    #searched-box .results-null .col-md-12 {
+        text-align: center !important;
     }
 
     #profile .user-info-box {
