Add margin bottom to the sigup button and classes logs-page and box-shadow

--- a/static/css/my_css.css
+++ b/static/css/my_css.css
@@ -561,6 +561,10 @@ button,
     transform: translateY(20%); 
 }
 
+.logs-pages .btn-signup {
+    margin-bottom: 20px;
+}
+
 .log-out {
     margin-bottom: 80px;
 }
