--- a/static/css/my_css.css
+++ b/static/css/my_css.css
@@ -550,6 +550,14 @@ button,
     font-family: 'Kaushan Script', cursive;
 }
 
+.modal {
+    top: 90px !important;
+}
+
+body.modal-open {
+    overflow: visible !important;
+}
+
 /*******************************
 *                              *
 *         LOGS PAGES          *
@@ -652,6 +660,10 @@ button,
     .row-reverse .col-md-4,
     .row-reverse .col-md-8 {
         width: 100%;
+    }
+
+    .content-description h4 {
+        margin-top: 15px;
     }
 }
 
