Add logo image and change image URL to jpg

--- a/templates/about.html
+++ b/templates/about.html
@@ -12,8 +12,8 @@
             <div class="row">
                 <div class="col-md-4">
                     <img class="mb-3 box-shadow bg-linear-gradient"
-                    src="{% static 'images/logos/logo-tasty-blog-square-removebg-2.png' %}" alt="Tasty Blog Logo Image">
-                    <img class="mb-3 box-shadow " src="{% static 'images/small-img/tasty-blog-img-1-500x300.jpg' %}" alt="Tasty Blog Image">
+                    src="{% static 'images/logos/logo-tasty-about.tasty.png' %}" alt="Tasty Blog Logo Image">
+                    <img class="mb-3 box-shadow " src="{% static 'images/small-img/chef_about.jpg' %}" alt="Tasty Blog Image">
                 </div>
                 <div class="col-md-8">
                     <h3 class="sub-title">This blog is for anyone who loves to cook and for everyone who doesn’t.</h3>
