Add height for carousel-item class

--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <!-- FOOTER -->
-<footer id="footer" class="footer bg-setup" style="background-image:url({% static 'images/footer-bg.jpg' %});">
+<footer id="footer" class="footer bg-setup main-bg-desktop main-bg-mobile">
     <div class="overlay overlay-footer"></div>
     <div class="container-fluid">
         <div class="row">
