--- a/templates/index.html
+++ b/templates/index.html
@@ -13,8 +13,7 @@
                 <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
             <div class="carousel-inner">
-                <div class="carousel-item bg-setup active"
-                    style="background-image:url({% static 'images/main_bg.jpg' %}); height: 100vh;">
+                <div class="carousel-item bg-setup active carousel-bg-1 carousel-bg-1-mobile">
                     <div class="container">
                         <div class="overlay"></div>
                         <div class="carousel-caption text-start">
@@ -24,8 +23,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="carousel-item bg-setup"
-                    style="background-image:url(https://iamafoodblog.b-cdn.net/wp-content/uploads/2022/04/spicy-noodles-1587w-1536x1025.webp); height: 100vh;">
+                <div class="carousel-item bg-setup carousel-bg-2 carousel-bg-2-mobile">
                     <div class="container">
                         <div class="overlay"></div>
                         <div class="carousel-caption text-start">
@@ -35,8 +33,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="carousel-item bg-setup"
-                    style="background-image:url(https://iamafoodblog.b-cdn.net/wp-content/uploads/2019/05/easy-jia-jiang-mian-3777w.jpg); height: 100vh;">
+                <div class="carousel-item bg-setup carousel-bg-3 carousel-bg-3-mobile">
                     <div class="container">
                         <div class="overlay"></div>
                         <div class="carousel-caption text-start">
