--- a/static/css/my_css.css
+++ b/static/css/my_css.css
@@ -33,7 +33,7 @@ html {
 
 :root {
     --interative-color: rgb(208, 54, 112);
-    --interative-color: rgb(44, 149, 185);
+    --interative-color: #2c95b9;
     /* --interative-color: #fa6559; */
     --text-color-light: #999;
 }
@@ -226,7 +226,7 @@ button,
 .navbar.nav-active {
     position: fixed;
     /* background-color: #2c78eb!important; */
-    background: linear-gradient(100deg, #2d557d, #9610fd, rgb(252 84 4));
+    background: linear-gradient(100deg, #2d557d, #9610fd, #fc5404);
     box-shadow: rgb(1 1 1 / 50%) 1px 10px 10px -1px;
     height: 60px;
 }
