--- a/templates/profile.html
+++ b/templates/profile.html
@@ -19,6 +19,7 @@
             <div class="user-info-box col-md-6">
                 <h3>Username: {{ user.username }}</h3>
                 <h3>Email: {{ user.email }}</h3>
+                <h3>Time Logged: {{ user.last_login | timesince }}</h3>
             </div>
         </div>
     </div>
