Add Emailjs services settings to send emails from the contact form

--- a/templates/components/scripts.html
+++ b/templates/components/scripts.html
@@ -1,5 +1,7 @@
 {% load static %}
 
+<!-- SEND MAIL JS -->
+<script src="{% static 'js/sendMail.js' %}"></script>
 <!-- JQUERY -->
 <script src="{% static 'js/jquery_3.6.0.js' %}"></script>
 <!-- BOOTSTRAP JS -->
