--- a/templates/components/head.html
+++ b/templates/components/head.html
@@ -2,6 +2,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -21,7 +22,14 @@
     <link rel="stylesheet" href="{% static 'bootstrap/bootstrap_5.1.0/css/bootstrap.min.css' %}">
     <!-- FONT-AWESOME -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-
     <!-- MY CSS -->
     <link rel="stylesheet" type="text/css" href="{% static 'css/my_css.css' %}">
+    <!-- Email Js   -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+        (function () {
+            emailjs.init("cC-DOlxja-pr2ccKv");
+        })();
+    </script>
 <body>
