--- a/templates/contact.html
+++ b/templates/contact.html
@@ -18,15 +18,16 @@
                         <p><i class="fas fa-home"></i>St. Augustine Street 78a - Dublin 8</p>
                     </div>
                     <div>
-                        {% if name %}
+                        <!-- {% if name %}
                         <h4 class="email-sent-message alert-success">Thanks for your email {{ name }}.
                             <br> We will contact you as soon as possible!</h4>
-                        {% endif %}
+                        {% endif %} -->
+                        <h4 id="email_alert"> </h4>
                     </div>
                 </div>
                 <div class="col-md-8">
                     <!-- contact form -->
-                    <form action="{% url 'contact' %}" method="post" class="row g-3"></form>
+                    <form action="{% url 'contact' %}" onsubmit="return sendMail(this);" class="row g-3"></form>
                         {% csrf_token %}
                         <div class="col-md-6">
                             <label for="name" class="form-label">Name</label>
