Add color-white class

--- a/static/css/my_css.css
+++ b/static/css/my_css.css
@@ -42,6 +42,10 @@ html {
     color: var(--text-color-light);
 }
 
+.color-white {
+    color: white;
+}
+
 .title {
     font-size: clamp(2.5rem, 2vw, 3rem);
     text-align: center;
