--- a/static/css/my_css.css
+++ b/static/css/my_css.css
@@ -3,7 +3,6 @@
 *        GOOGLE FONTS          *
 *                              *
 *******************************/
-
 /* Kaushan */
 @import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
 
@@ -18,6 +17,8 @@
 * {
     margin: 0;
     padding: 0;
+    -webkit-transition: all ease 0.2s;
+    -o-transition: all ease 0.2s;
     transition: all ease 0.2s;
     text-decoration: none !important;
 }
@@ -113,6 +114,8 @@ button,
     background-position: center;
     background-repeat: no-repeat !important;
     background-size: cover !important;
+    -webkit-transition: none;
+    -o-transition: none;
     transition: none;
     z-index: 1;
 }
@@ -128,10 +131,11 @@ button,
 }
 
 .bg-linear-gradient {
-    background: linear-gradient(50deg, #2d557d, #9610fd, rgb(252 84 4));
+    background: -o-linear-gradient(40deg, #2d557d, #9610fd, rgb(252 84 4));
 }
 
 .box-shadow {
+    -webkit-box-shadow: rgb(1 1 1 / 20%) 1px 10px 10px -1px;
     box-shadow: rgb(1 1 1 / 20%) 1px 10px 10px -1px;
 }
 
@@ -145,6 +149,7 @@ button,
     width: 100%;
     position: fixed;
     z-index: 2000;
+    background: -o-linear-gradient(320deg, #2d557d, #9610fd, rgb(252 84 4));
     background: linear-gradient(130deg, #2d557d, #9610fd, rgb(252 84 4));
     display: none;
 }
@@ -230,7 +235,9 @@ button,
 .navbar.nav-active {
     position: fixed;
     /* background-color: #2c78eb!important; */
+    background: -o-linear-gradient(350deg, #2d557d, #9610fd, #fc5404);
     background: linear-gradient(100deg, #2d557d, #9610fd, #fc5404);
+    -webkit-box-shadow: rgb(1 1 1 / 50%) 1px 10px 10px -1px;
     box-shadow: rgb(1 1 1 / 50%) 1px 10px 10px -1px;
     height: 60px;
 }
@@ -241,6 +248,8 @@ button,
 
 .nav-link {
     color: black;
+    -webkit-transition: all ease-in 0.3s;
+    -o-transition: all ease-in 0.3s;
     transition: all ease-in 0.3s;
 }
 
@@ -299,6 +308,8 @@ button,
 
 .carousel-caption {
     top: 60%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
     transform: translateY(-50%);
 }
 
@@ -323,6 +334,8 @@ button,
     border-radius: 25px;
     padding: 10px 35px;
     border: 2px solid #fff;
+    -webkit-transition: all ease-in 0.3s;
+    -o-transition: all ease-in 0.3s;
     transition: all ease-in 0.3s;
     font-size: clamp(0.8rem, 2vw, 1.1rem);
 }
@@ -345,6 +358,8 @@ button,
 .content .content-img img {
     width: 100%;
     height: auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     cursor: pointer;
 }
@@ -383,6 +398,8 @@ button,
     text-align: center;
     top: 50%;
     right: 0;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
     transform: translateY(-50%);
 }
 
@@ -437,6 +454,7 @@ button,
 }
 
 #footer hr {
+    background: -o-linear-gradient(350deg, #2d557d, #9610fd, rgb(252 84 4));
     background: linear-gradient(100deg, #2d557d, #9610fd, rgb(252 84 4));
     height: 5px;
     z-index: 1000;
@@ -463,6 +481,7 @@ button,
 
 .content-box {
     /* background-color: rgb(177, 162, 162); */
+    -webkit-box-shadow: rgb(1 1 1 / 20%) 1px 10px 10px -1px;
     box-shadow: rgb(1 1 1 / 20%) 1px 10px 10px -1px;
     padding: 15px;
     margin-bottom: 25px;
@@ -505,6 +524,7 @@ button,
 }
 
 .content-box:hover {
+    -webkit-box-shadow: rgb(1 1 1 / 50%) 1px 10px 10px -1px;
     box-shadow: rgb(1 1 1 / 50%) 1px 10px 10px -1px;
 }
 
@@ -519,6 +539,7 @@ button,
 
 #contact .contact-details {
     /* background-color: #2c78eb; */
+    background: -o-linear-gradient(40deg, #2d557d, #9610fd, rgb(252 84 4));
     background: linear-gradient(50deg, #2d557d, #9610fd, rgb(252 84 4));
     padding: 50px 33px;
     color: #fff;
@@ -544,8 +565,14 @@ button,
     left: 0;
     right: 0;
     text-align: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
 }
 
@@ -572,6 +599,8 @@ button,
 .enjoy-box {
     text-align: center;
     font-size: 3rem;
+    -webkit-transform: rotate(-15deg) !important;
+    -ms-transform: rotate(-15deg) !important;
     transform: rotate(-15deg) !important;
     margin-top: 50px !important;
 }
@@ -596,6 +625,8 @@ body.modal-open {
 
 .logs-pages {
     margin-bottom: 250px;
+    -webkit-transform: translateY(20%);
+    -ms-transform: translateY(20%);
     transform: translateY(20%); 
 }
 
@@ -658,6 +689,7 @@ body.modal-open {
     }
 
     .navbar-toggler:focus {
+        -webkit-box-shadow: rgb(1 1 1 / 50%) 1px 10px 10px -1px;
         box-shadow: rgb(1 1 1 / 50%) 1px 10px 10px -1px;
     }
 
@@ -684,6 +716,9 @@ body.modal-open {
     }
 
     .row-reverse {
+        -webkit-box-orient: vertical !important;
+        -webkit-box-direction: normal !important;
+        -ms-flex-direction: column !important;
         flex-direction: column !important;
     }
 
@@ -749,6 +784,8 @@ body.modal-open {
     }
     
     .logs-pages {
+        -webkit-transform: translateY(-5%);
+        -ms-transform: translateY(-5%);
         transform: translateY(-5%);
     }
 }
@@ -832,6 +869,8 @@ body.modal-open {
     }
 
     .logs-pages {
-        transform: translateY(8%);
+        -webkit-transform: translateY(8%);
+        -ms-transform: translateY(8%);
+         transform: translateY(8%);
     }
 }
