Add CSS style for edit comment page

--- a/static/css/my_css.css
+++ b/static/css/my_css.css
@@ -616,7 +616,18 @@ body.modal-open {
 
 /*******************************
 *                              *
-*         LOGS PAGES          *
+*     UPDATE COMMENT PAGE      *
+*                              *
+*******************************/
+
+.edit-comments form textarea{
+    padding: 25px 100px;
+    outline: none;
+}
+
+/*******************************
+*                              *
+*         LOGS PAGES           *
 *                              *
 *******************************/
 
@@ -848,6 +859,10 @@ body.modal-open {
     .main-bg-desktop {
         display: none;
     }
+
+    .edit-comments form textarea{
+        padding: 15px 35px;
+    }
 }
 
 @media only screen and (max-width: 500px) {
@@ -869,5 +884,9 @@ body.modal-open {
         -webkit-transform: translateY(8%);
         -ms-transform: translateY(8%);
          transform: translateY(8%);
+    }
+
+    .edit-comments form textarea{
+        padding: 15px 5px;
     }
 }
