Add CSS style for btn-delete and btn-edit classes

--- a/static/css/my_css.css
+++ b/static/css/my_css.css
@@ -614,6 +614,15 @@ body.modal-open {
     overflow: visible !important;
 }
 
+.btn-delete {
+    width: 80px;
+}
+
+.btn-edit {
+    padding: 6px 26px;
+    margin-right: 8px;
+}
+
 /*******************************
 *                              *
 *     UPDATE COMMENT PAGE      *
