Fix typos in the alert messages

--- a/templates/search.html
+++ b/templates/search.html
@@ -32,8 +32,8 @@
                 <div class="row">
                     <div class="col-md-12" style="text-align: center;">
                         <h2>We Are Sorry</h2>
-                        <p>There are no search for <span class="text-success">"{{ searched }}"</span> in the website.</p>
-                        <p>Try searching again.</p>
+                        <p>There is no search for <span class="text-success">"{{ searched }}"</span> on the website.</p>
+                        <p>Please try searching again</p>
                     </div>
                 </div>
             </div>
@@ -43,7 +43,7 @@
         <div class="results-empty">
             <div class="row">
                 <div class="col-md-12">
-                    <h2>You forgot to search for a recepie. <br>Please try searching again.</h2>
+                    <h2>You forgot to search for a recipe. <br>Please try searching again.</h2>
                 </div>
             </div>
         </div>
