Change page title for Highlight Recipes

--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,7 @@
 
     <!-- CONTENT SECTION -->
     <section id="content" class="content">
-        <h2 class="title"> Our Recepies</h2>
+        <h2 class="title">Highlight Recipes</h2>
         <div class="container">
             <div class="row row-reverse">
                 {% for post in post_list %}
