--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -102,7 +102,7 @@
                         <span><i class="fas fa-clock"></i> {{ comment.timestamp | timesince }}</span>
                         <div class="user-comment">
                             <p class="user-comment-title"></p>
-                            <div class="mt-3 w-50">{{ comment.body | linebreaks }}</div>
+                            <div class="mt-3 w-75"><i class="far fa-comment-dots"></i>{{ comment.body | linebreaks }}</div>
                         </div>
                         <hr class="hr-small">
                     </div>
@@ -131,6 +131,7 @@
                                 </div>
                             </div>
                     {% endif %}
+                    <hr class="hr-small">
                     {% endfor %}
                 </div>
             </div>
