--- a/static/css/my_css.css
+++ b/static/css/my_css.css
@@ -614,6 +614,10 @@ body.modal-open {
     overflow: visible !important;
 }
 
+.modal-open[style] {
+    padding-right: 0px !important;
+}
+
 .btn-delete {
     width: 80px;
 }
