--- a/static/css/my_css.css
+++ b/static/css/my_css.css
@@ -81,10 +81,15 @@ p {
 .far,
 .fab,
 .fa,
+.fa-solid,
 .dropdown-toggle::after {
     margin-right: 6px;
     color: var(--interative-color) !important;
     cursor: pointer;
+}
+
+.fa-solid {
+    font-size: 15px;
 }
 
 .fa-sign-out {
@@ -472,11 +477,13 @@ button,
     width: 100%;
 }
 
-#blog-content-2 {
+#blog-content-2,
+#books-content-2 {
     display: none;
 }
 
-.content-box {
+.content-box,
+.content-book {
     /* background-color: rgb(177, 162, 162); */
     -webkit-box-shadow: rgb(1 1 1 / 20%) 1px 10px 10px -1px;
     box-shadow: rgb(1 1 1 / 20%) 1px 10px 10px -1px;
@@ -633,9 +640,8 @@ body.modal-open {
 *                              *
 *******************************/
 
-.edit-comments form textarea{
-    padding: 25px 100px;
-    outline: none;
+.edit-comments form textarea {
+    padding: 25px;
 }
 
 /*******************************
@@ -692,6 +698,38 @@ body.modal-open {
 
 /*******************************
 *                              *
+*          Books PAGE          *
+*                              *
+*******************************/
+.book-content .sub-title {
+    font-size: clamp(1.5rem, 2vw, 2.2rem);
+    margin: -25px 0 25px;
+}
+
+.book-content .title {
+    margin-bottom: -10px;
+}
+
+.content-book img {
+    height: 250px !important;
+}
+
+.content-book .content-description p {
+    margin-bottom: 100px;
+}
+
+/*******************************
+*                              *
+*     ADD/EDIT BOOKS PAGE      *
+*                              *
+*******************************/
+#add_book form {
+    margin: 0 auto;
+    display: block;
+}
+
+/*******************************
+*                              *
 *        MEDIA QUERIES         *
 *                              *
 *******************************/
@@ -720,12 +758,14 @@ body.modal-open {
         bottom: 5px;
     }
 
-    #blog-content-1 {
+    #blog-content-1,
+    #books-content-1 {
         display: none;
     }
 
-    #blog-content-2 {
-        display: block;
+    #blog-content-2,
+    #books-content-2 {
+        display: block !important;
     }
 
     #post-content .post-content-img {
@@ -809,6 +849,10 @@ body.modal-open {
         -ms-transform: translateY(-5%);
         transform: translateY(-5%);
     }
+
+    .edit-comments form textarea {
+        padding: 6px;
+    }
 }
 
 @media only screen and (max-width: 600px) {
@@ -872,10 +916,6 @@ body.modal-open {
     .main-bg-desktop {
         display: none;
     }
-
-    .edit-comments form textarea{
-        padding: 15px 35px;
-    }
 }
 
 @media only screen and (max-width: 500px) {
@@ -885,6 +925,16 @@ body.modal-open {
 
     #contact .container .col-md-8 {
        padding: 0 10px 15px;
+    }
+
+    input#id_picture {
+        font-size: 12px;
+    }
+    .edit-comments form textarea {
+        width: 250px;
+    }
+    .table>:not(caption)>*>* {
+        padding: 0.6rem .5rem;
     }
 }
 
@@ -899,7 +949,7 @@ body.modal-open {
          transform: translateY(8%);
     }
 
-    .edit-comments form textarea{
+    .edit-comments form textarea {
         padding: 15px 5px;
     }
 }
