--- a/static/css/my_css.css
+++ b/static/css/my_css.css
@@ -726,6 +726,7 @@ body.modal-open {
 #add_book form {
     margin: 0 auto;
     display: block;
+    width: inherit;
 }
 
 /*******************************
