--- a/static/css/my_css.css
+++ b/static/css/my_css.css
@@ -711,11 +711,17 @@ body.modal-open {
 }
 
 .content-book img {
-    height: 250px !important;
+    height: 300px !important;
+    width: 70% !important;
 }
 
 .content-book .content-description p {
     margin-bottom: 100px;
+}
+
+.fa-circle-check {
+    color: rgb(0, 255, 21) !important;
+    font-size: 25px;
 }
 
 /*******************************
