--- a/templates/books.html
+++ b/templates/books.html
@@ -15,10 +15,9 @@
             <div class="col-md-4">
                 <div class="content-book">
                     <div class="content-img">
-                        <div class="overlay"></div>
                         <img src="{{ book.picture.url }}" alt="{{ book.title }} Image">
                         <div class="content-categorie">
-                            <h4><i class="fa-solid fa-books"></i>Books</h4>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                     <div class="content-description">
@@ -84,7 +83,7 @@
                         <div class="overlay"></div>
                         <img src="{{ book.picture.url }}" alt="{{ book.title }} Image">
                         <div class="content-categorie">
-                            <h4><i class=fa-solid fa-books></i>Books</h4>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                     <div class="content-description">
