Add div to align center submit button

--- a/templates/add_book.html
+++ b/templates/add_book.html
@@ -26,7 +26,9 @@
                     </tr>
                     {% endfor %}
                 </table>
-                <button class="btn btn-secondary right mb-4" type="submit" value="Save">Update</button>
+                <div class="text-center">
+                    <button class="btn btn-secondary right mb-4" type="submit" value="Save">Submit</button>
+                </div>
             </form>
         </div>
     </div>
