Fix spelling for the word Edit

--- a/templates/add_book.html
+++ b/templates/add_book.html
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="col-12 text-center">
                 <h1 class="title">Add Book</h1>
-                <p>Add/Eddit Book as: {{ user.username }}</p>
+                <p>Add/Edit Book as: {{ user.username }}</p>
                 {% if user.profile.image %}
                 <img class="author-img mb-4" src="{{ user.profile.image.url }}" alt="User Image">
                 {% else %}
