--- a/static/css/my_css.css
+++ b/static/css/my_css.css
@@ -295,6 +295,10 @@ button,
     background-color: transparent;
 }
 
+.alert {
+    margin-top:100px;
+}
+
 /*******************************
 *                              *
 *        HERO SECTION          *
@@ -657,6 +661,7 @@ body.modal-open {
 
 .logs-pages {
     margin-bottom: 250px;
+    margin-top: 50px;
     -webkit-transform: translateY(20%);
     -ms-transform: translateY(20%);
     transform: translateY(20%); 
