Move the box-shadow class to the container

--- a/templates/books/add_book.html
+++ b/templates/books/add_book.html
@@ -3,8 +3,8 @@
 {% block content %}
 
 <!-- ADD/UPDATE BOOK SECTION -->
-<div id="add_book" class="edit-comments box-shadow">
-    <div class="container">
+<div id="add_book" class="edit-comments">
+    <div class="container box-shadow">
         <div class="row">
             <div class="col-12 text-center">
                 {% if book %}
