--- a/templates/posts/post_detail.html
+++ b/templates/posts/post_detail.html
@@ -94,7 +94,12 @@
                         {% endif %}
                         {% endif %}
                     </div>
-                    <h4>Comments</h4>
+                    <!-- Comments -->
+                    {% if comments %}
+                    <h4>Comments:</h4>
+                    {% else %}
+                    <h4>No comments yet:</h4>
+                    {%endif %}
                     <span class="text-secondary"><i class="far fa-comments"></i>{{ num_comments }}</span>
                     {% for comment in comments %}
                     <div class="users-comments">
