--- a/templates/components/head.html
+++ b/templates/components/head.html
@@ -22,12 +22,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <!-- MY CSS -->
     <link rel="stylesheet" type="text/css" href="{% static 'css/my_css.css' %}">
-    <!-- Email Js   -->
-    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
-    </script>
-    <script>
-        (function () {
-            emailjs.init("cC-DOlxja-pr2ccKv");
-        })();
+    <!-- Email Js -->
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script>  
+    (function () {
+        emailjs.init("cC-DOlxja-pr2ccKv");
+    })();
     </script>
 <body>
