--- a/templates/posts/profile.html
+++ b/templates/posts/profile.html
@@ -6,7 +6,7 @@
 
 <!-- PROFILE SECTION -->
 <section id="profile">
-    <h2 class="title">Profile Info</h2>
+    <h2 class="title mt-5">Profile Info</h2>
     <div class="container">
         <div class="row">
             <div class="col-md-6">
