--- a/static/css/my_css.css
+++ b/static/css/my_css.css
@@ -606,6 +606,7 @@ button,
 *                              *
 *******************************/
 #post-content .post-content-img {
+    margin-top: 40px;
     width: 85%;
     display: block;
 }
