--- a/static/css/my_css.css
+++ b/static/css/my_css.css
@@ -142,6 +142,10 @@ button,
     box-shadow: rgb(1 1 1 / 20%) 1px 10px 10px -1px;
 }
 
+.mt-70 {
+    margin-top: 70px;
+}
+
 /*******************************
 *                              *
 *          SEARCH BOX          *
