--- a/templates/books/add_book.html
+++ b/templates/books/add_book.html
@@ -8,10 +8,10 @@
         <div class="row">
             <div class="col-12 text-center">
                 {% if book %}
-                <h1 class="title">Edit Book</h1>
+                <h1 class="title mt-70">Edit Book</h1>
                 <p>Edit Book as: {{ user.username | slice:":10" }}</p>
                 {% else %}
-                <h1 class="title">Add Book</h1>
+                <h1 class="title mt-70">Add Book</h1>
                 <p>Add Book as: {{ user.username | slice:":10" }}</p>
                 {% endif %}
                 {% if user.profile.image %}
